--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/root"
     tools:context=".MainActivity">
 
     <TextView
@@ -111,4 +112,5 @@
         android:text="Submit"
         app:layout_constraintStart_toStartOf="@+id/terms"
         app:layout_constraintTop_toBottomOf="@+id/terms" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
