--- a/app/src/main/res/navigation/nav_type.xml
+++ b/app/src/main/res/navigation/nav_type.xml
@@ -3,27 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_type"
-    app:startDestination="@id/load_fragment">
+    app:startDestination="@id/home_fragment">
 
     <fragment
-        android:id="@+id/load_fragment"
+        android:id="@+id/home_fragment"
         android:name="com.example.thirdactivity.Home"
-        android:label="fragment_first"
-        tools:layout="@layout/home_fragment" >
+        android:label="home_fragment"
+        tools:layout="@layout/home_fragment">
         <action
             android:id="@+id/home_form"
-            app:destination="@id/secondFragment"
+            app:destination="@id/form_fragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
-        android:id="@+id/secondFragment"
+        android:id="@+id/form_fragment"
         android:name="com.example.thirdactivity.Form"
-        android:label="fragment_second"
-        tools:layout="@layout/form_fragment" >
+        android:label="form_fragment"
+        tools:layout="@layout/form_fragment">
         <action
             android:id="@+id/form_home"
-            app:destination="@id/load_fragment"
+            app:destination="@id/home_fragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
