--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -63,7 +63,27 @@
         </LinearLayout>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="12dp">
 
+        <TextView
+            android:id="@+id/labelclasse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="Classe :"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/classeF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="DSI31" />
+
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
